--- a/dd-style.css
+++ b/dd-style.css
@@ -69,7 +69,6 @@ h1 {
 
 .album-card {
   align-items: stretch;
-  background: #e7e7e7;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -78,7 +77,7 @@ h1 {
   color: black;
   box-shadow: 0 2px 8px #0001;
   height: clamp(200px, calc((100vmin - 2rem)/3), 600px);
-  flex-grow: 1;
+  width: auto;
   text-align: center;
   cursor: pointer;
   scale: 1;
