--- a/dd-style.css
+++ b/dd-style.css
@@ -1,5 +1,5 @@
 :root{
-  --logo: url('Assets/Images/SchwenzerLogo1.png');
+  --logo: url('Assets/Images/Branding/SchwenzerLogo1.png');
   --instagram-icon: url("https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/256px-Instagram_icon.png?20200512141346");
   --home-icon: url("https://upload.wikimedia.org/wikipedia/commons/3/34/Home-icon.svg");
 }
@@ -61,29 +61,30 @@ h1 {
 
 #album-list {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: row;
   flex-wrap: wrap;
   align-content: start;
+  flex-shrink: 1;
   gap:0rem;
 }
 
 .album-card {
   align-items: stretch;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  aspect-ratio: 1/1 auto;
-  object-fit: cover;
-  z-index: 100;
+  object-fit: contain;
+  z-index: 5;
   color: black;
   box-shadow: 0 2px 8px #0001;
-  height: auto;
-  width: 20%;
+  max-width: 33.33%;
+  max-height: 500px;
+  display: inline-flex;
   text-align: center;
   cursor: pointer;
   scale: 1;
   transition: all 0.6s;
-  overflow: hidden;
+  border-radius: 0px;
 }
 
 #album-list > .album-card:nth-child(2n+2){
@@ -93,6 +94,7 @@ h1 {
 .album-card:hover {
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.39); 
   z-index: 50;  
+  border-radius: 15px;
   > img{
       filter: brightness(0.3);
   }
@@ -103,7 +105,7 @@ h1 {
 
 
 .album-card:hover > img {
-  scale:1.025;
+  scale:1.05;
 
 }
 
@@ -116,8 +118,7 @@ h1 {
 .album-thumb {
   position: relative;
   width: 100%;
-  height: 100%;
-  aspect-ratio: 1 / 1;
+  height: auto;
   object-fit: cover;
 }
 
