--- a/style.css
+++ b/style.css
@@ -51,8 +51,8 @@
     height: 100vh;
     perspective: 100px;
     transform-style: preserve-3d;
-    overflow-x: scroll;
-    overflow-y: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
   }
 
   a{
@@ -374,6 +374,11 @@
     color: var(--white);
   }
 
+  .logo{
+    background-image: url("Assets/Images/Branding/SchwenzerLogo1.png");
+  }
+
+
 /* Landscape phones and down */
 @media only screen and (max-width: 480px) {
 
@@ -532,8 +537,6 @@
     height: calc(100vh - clamp(30px, 20vh, 10vh));
     perspective: 100px;
     transform-style: preserve-3d;
-    overflow-x: hidden;
-    overflow-y: scroll;
   }
 
   .nav-container {
@@ -559,7 +562,7 @@
     width: auto;
     height: calc(100% - 20px);
     aspect-ratio: 1 / 1;
-    background-image: url("Assets/Images/SchwenzerLogo1.png");
+
     background-size: contain;
     background-position: center;
     background-origin: content-box;
@@ -886,7 +889,7 @@
     height: auto;
     aspect-ratio: 1 / 1;
     border-radius: 50%;
-    background-image: url("Assets/Images/SchwenzerLogo1.png");
+
     background-size: contain;
     background-position: center;
     background-origin: content-box;
@@ -1128,7 +1131,7 @@
     width: 4vw;
     height: auto;
     aspect-ratio: 1 / 1;
-    background-image: url("Assets/Images/SchwenzerLogo1.png");
+
     background-size: contain;
     background-position: center;
     background-origin: content-box;
@@ -1377,7 +1380,7 @@
     min-width: 70px;
     max-height: 150px;
     max-width: 150px;
-    background-image: url("Assets/Images/SchwenzerLogo1.png");
+
     background-size: contain;
     background-position: center;
     background-origin: content-box;
