--- a/dd-style.css
+++ b/dd-style.css
@@ -73,30 +73,32 @@ h1 {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  object-fit: contain;
+  object-fit: cover;
   z-index: 5;
   color: black;
   box-shadow: 0 2px 8px #0001;
-  max-width: 33.33%;
-  max-height: 500px;
+  max-width: 25%;
+  max-height: clamp(600px,25vw,800px);
   display: inline-flex;
   text-align: center;
   cursor: pointer;
   scale: 1;
-  transition: all 0.6s;
+  transition: all ease-in-out 300ms;
   border-radius: 0px;
 }
 
-#album-list > .album-card:nth-child(2n+2){
+#album-list > .album-card:nth-child(2n+3){
   flex-grow: 2 !important;
 }
 
 .album-card:hover {
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.39); 
   z-index: 50;  
-  border-radius: 15px;
+  border-radius: 20px;
   > img{
       filter: brightness(0.3);
+      overflow: visible;
+      border-radius: 20px;
   }
 }
 
