--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
   .wrapper{
     display: flex;
     position: relative;
-    width: 100vw;
+    width: 100w;
     height: 100vh;
     perspective: 100px;
     transform-style: preserve-3d;
