Update and add email contact

--- a/style.css
+++ b/style.css
@@ -143,6 +143,37 @@
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
   }
 
+/* Contact Email Icon*/
+  .email-icon {
+    position: absolute;
+    margin-right: 3vw;
+    top: 15px; /* Overlaps bottom edge */
+    right: 30px;
+    width: 3vw;
+    height: auto;
+    aspect-ratio: 3 / 2;
+    min-height: 50px;
+    min-width: 50px;
+    max-height: 150px;
+    max-width: 150px;
+
+    background-size: contain;
+    background-position: center;
+    background-origin: content-box;
+    background-repeat: no-repeat;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.521);
+    display: flex;
+    align-items:baseline;
+    justify-content: space-around;
+  }
+
+  .email-icon a{
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+    z-index: 1005;
+  }
+
 
   /* Contact Formatting */
 
@@ -378,6 +409,9 @@
     background-image: url("Assets/Images/Branding/SchwenzerLogo1.png");
   }
 
+  .email-icon {
+    background-image: url("Assets/Images/Branding/envelope.png");
+  }
 
 /* Landscape phones and down */
 @media only screen and (max-width: 480px) {
