--- a/dd-style.css
+++ b/dd-style.css
@@ -22,6 +22,25 @@ body {
   margin: 0;
 }
 
+::-webkit-scrollbar{
+	width: 8px;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-track-piece{
+	background-color: #222222;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb{
+	background-color: #141414;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover{
+	background-color: #1a1a1a;
+}
+
 .nav-container{
   background-color: var(--black);
   color: var(--white);
@@ -100,7 +119,7 @@ h1 {
   margin: 10px;
   > img {
     scale: 1;
-    transition: all .5s;
+    transition: all 0.5s;
     z-index: 50;
   }
 }
@@ -121,13 +140,11 @@ h1 {
   }
 }
 
-.album-card 
-
 .album-thumb {
   position: relative;
   width: 100%;
   height: auto;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .album-card {
@@ -135,6 +152,17 @@ h1 {
   font-weight: 700;
   font-size: clamp(1rem, 2.5cqh, 2.5rem);
   color: #c1c1c1;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.album-card.show-content {
+  background-color: #111;
+  font-size: clamp(.6rem, calc(0.1rem + 2cqh), 2.2rem);
+  max-width: 100%;
+  width: 100%;
+  height: 80%;
+  max-height: clamp(800px, 80%, 1000px);
 }
 
 .album-card:hover > .album-card-title, .album-card.active > .album-card-title {
@@ -188,10 +216,6 @@ h1 {
   opacity: 0;
 }
 
-.album-card.album-card.show-content{
-  max-width: 100%;
-}
-
 .album-card.show-content > .content{
   display: flex;
 }
@@ -206,37 +230,56 @@ h1 {
 
 .album-desc-title{
   height: 10%;
+  margin: 20px 0 20px 0;
+  align-content: center;
   > h1{
-    margin: 10px;
+    font-size: clamp(1.5rem, .1rem + 3.5cqh, 2.8rem);
+    alignment-baseline: central;
+    margin: 0 auto;
   }
 }
 .album-images{
+  align-items: center;
+  justify-content: center;
   z-index: 1010;
-  height: calc(60% - 40px);
+  height: calc(75% - 40px);
   width: 95%;
   overflow-y: auto;
-  margin: auto;
+  overflow-x: hidden;
+  margin: 0 auto;
   >img {
+    margin: 4.4% auto;
     height: 98%;
-    width: auto;
+    width: 100%;
     object-fit: contain;
+    align-items: center;
+    align-self: center;
   }
 
 }
 
+.album-images > img:first-child{
+  margin: 0px auto;
+}
+
+.album-images > img:nth-child(2){
+  margin-top: 8.8%;
+}
+
 .album-card-desc{
-  margin: 10px;
+  height: 15%;
+  margin: 10px 0 20px 0;
 }
 
 
 .content{
   position: absolute;
-  top: 0px;
-  left: 0px;
+  top: 1%;
+  left: 1%;
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 100%;
+  width: 98%;
+  height: 98%;
   > alum-images > img{
     position: relative;
     display: flex;
