--- a/dd-style.css
+++ b/dd-style.css
@@ -158,11 +158,10 @@ h1 {
 
 .album-card.show-content {
   background-color: #111;
-  font-size: clamp(.6rem, calc(0.1rem + 2cqh), 2.2rem);
+  font-size: clamp(.6rem, calc(0.1rem + 2cqmin), 2.2rem);
   max-width: 100%;
   width: 100%;
-  height: 80%;
-  max-height: clamp(800px, 80%, 1000px);
+  height: max-content;
 }
 
 .album-card:hover > .album-card-title, .album-card.active > .album-card-title {
@@ -233,7 +232,7 @@ h1 {
   margin: 20px 0 20px 0;
   align-content: center;
   > h1{
-    font-size: clamp(1.5rem, .1rem + 3.5cqh, 2.8rem);
+    font-size: clamp(1.5rem, .1rem + 4cqw, 2.8rem);
     alignment-baseline: central;
     margin: 0 auto;
   }
@@ -242,11 +241,11 @@ h1 {
   align-items: center;
   justify-content: center;
   z-index: 1010;
-  height: calc(75% - 40px);
   width: 95%;
   overflow-y: auto;
   overflow-x: hidden;
   margin: 0 auto;
+  min-height: 350px;
   >img {
     margin: 4.4% auto;
     height: 98%;
@@ -267,26 +266,17 @@ h1 {
 }
 
 .album-card-desc{
-  height: 15%;
-  margin: 10px 0 20px 0;
+  height: fit-content;
+  width: 80%;
+  margin: 20px auto 20px auto;
 }
 
 
 .content{
   position: absolute;
-  top: 1%;
-  left: 1%;
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
-  width: 98%;
-  height: 98%;
-  > alum-images > img{
-    position: relative;
-    display: flex;
-    width: 20%;
-    height: auto;
-    object-fit: contain;
-  }
+  inset: 20px;
 }
 
 
