--- a/dd-style.css
+++ b/dd-style.css
@@ -109,7 +109,7 @@ h1 {
   box-shadow: 0 2px 8px #0001;
   max-width: clamp(400px, calc(25% - 20px), 800px);
   max-height: clamp(600px,25vw,800px);
-  display: inline-flex;
+  display: block;
   text-align: center;
   cursor: pointer;
   scale: 1;
@@ -143,7 +143,7 @@ h1 {
 .album-thumb {
   position: relative;
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -161,7 +161,7 @@ h1 {
   font-size: clamp(.6rem, calc(0.1rem + 2cqmin), 2.2rem);
   max-width: 100%;
   width: 100%;
-  height: max-content;
+  height: 100%;
 }
 
 .album-card:hover > .album-card-title, .album-card.active > .album-card-title {
@@ -213,6 +213,7 @@ h1 {
 
 .album-thumb.hidden {
   opacity: 0;
+  height: 0px;
 }
 
 .album-card.show-content > .content{
@@ -241,15 +242,16 @@ h1 {
   align-items: center;
   justify-content: center;
   z-index: 1010;
-  width: 95%;
+  width: 90%;
   overflow-y: auto;
   overflow-x: hidden;
   margin: 0 auto;
-  min-height: 350px;
+  height: fit-content;
+  max-height: min(800px, 50cqh);
   >img {
     margin: 4.4% auto;
     height: 98%;
-    width: 100%;
+    width: 98%;
     object-fit: contain;
     align-items: center;
     align-self: center;
@@ -267,7 +269,7 @@ h1 {
 
 .album-card-desc{
   height: fit-content;
-  width: 80%;
+  width: 90%;
   margin: 20px auto 20px auto;
 }
 
