--- a/dd-style.css
+++ b/dd-style.css
@@ -129,7 +129,6 @@ h1 {
   margin: 10px;
   > img {
     scale: 1;
-    transition: all 0.5s;
     z-index: 50;
   }
 }
@@ -171,7 +170,7 @@ h1 {
   font-size: clamp(.6rem, calc(0.1rem + 2cqmin), 2.2rem);
   max-width: 100%;
   width: 100%;
-  height: 100%;
+  height: max-content;
 }
 
 .album-card:hover > .album-card-title, .album-card.active > .album-card-title {
@@ -285,7 +284,7 @@ h1 {
 
 
 .content{
-  position: absolute;
+  position: relative;
   display: inline-flex;
   flex-direction: column;
   inset: 5px;
