--- a/dd-style.css
+++ b/dd-style.css
@@ -169,6 +169,7 @@ h1 {
   background-color: #111;
   font-size: clamp(.6rem, calc(0.1rem + 2cqmin), 2.2rem);
   max-width: 100%;
+  max-height: 100%;
   width: 100%;
   height: max-content;
 }
@@ -248,6 +249,7 @@ h1 {
   }
 }
 .album-images{
+  display: flow-root;
   align-items: center;
   justify-content: center;
   z-index: 1010;
@@ -261,6 +263,7 @@ h1 {
     margin: 4.4% auto;
     height: 98%;
     width: 98%;
+
     object-fit: contain;
     align-items: center;
     align-self: center;
